@@ -81,10 +81,18 @@ rasterToPoints <- function(x, fun=NULL, spatial=FALSE, ...) {
 	}
 	
 	if (spatial) {
-		v <- data.frame(xyv[ ,-c(1:2), drop=FALSE])
-		colnames(v) <- laynam
 		crs <- projection(x, asText=FALSE)
-		return( SpatialPointsDataFrame(coords=xyv[,1:2,drop=FALSE], data=v, proj4string=crs ) )
+		if (nrow(xyv) == 0) {
+			xyv <- rbind(xyv, 0)
+			v <- data.frame(xyv[ ,-c(1:2), drop=FALSE])
+			colnames(v) <- laynam
+			s <- SpatialPointsDataFrame(coords=xyv[,1:2,drop=FALSE], data=v, proj4string=crs )
+			return(s[0,])
+		} else {
+			v <- data.frame(xyv[ ,-c(1:2), drop=FALSE])
+			colnames(v) <- laynam
+			return( SpatialPointsDataFrame(coords=xyv[,1:2,drop=FALSE], data=v, proj4string=crs ) )
+		}
 		
 	} else {
 		colnames(xyv)[3:ncol(xyv)] <- laynam
